[package]
name = "logistics"
version = "0.1.0"
authors = ["Jan Špaček <patek.mail@gmail.com>"]
description = "Solution to NAIL069 task 2 (logistics)"
edition = "2018"

[dependencies.array2d]
version = "^0.2.1"

[dependencies.clap]
version = "^2.33.0"
default-features = false

[dependencies.fnv]
version = "^1.0.6"

[dependencies.indicatif]
version = "^0.13.0"

[dependencies.rayon]
version = "^1.2.1"

[profile.release]
debug = true
